--- a/index.html
+++ b/index.html
@@ -42,15 +42,18 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>What she knows?</h2>
+							<h2>What I knows?</h2>
 						</header>
 						<div class="content">
-							<p>She knows a <strong>variety</strong> of things in <strong><em>Fashion Designing</em></strong>.</p>
+							<p>I have learned a <strong>variety</strong> of things in <strong><em>Fashion Designing</em></strong> by my own.</p>
 							<ul class="feature-icons">
 								<li class="icon fa-laptop">Embroidery</li>
 								<li class="icon fa-bolt">Sketching</li>
 								<li class="icon fa-signal">Painting</li>
-														</ul>
+								<li class="icon fa-signal">Textile Design</li>
+								<li class="icon fa-signal">Pattern Making</li>
+								<li class="icon fa-signal">Layout</li>
+							</ul>
 							<p>I am learning more things day by day. Every day I thinks about a new design in every scope of field, and keep searching in my mind about new creativity. </p>
 						</div>
 					</section>
@@ -137,7 +140,7 @@
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">priyanshupandey403@gmail.com</a>
+									<a href="mailto: priyanshupandey1210@gmail.com">priyanshupandey1210@gmail.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
@@ -157,9 +160,6 @@
 							</ul>
 						</footer>
 					</section>
-
-				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 			</div>
 
