--- a/index.html
+++ b/index.html
@@ -153,8 +153,9 @@
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.facebook.com/ruchi.pandey.1210" target="__blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.instagram.com/r__1210_/" target="__blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="tel:+919990796102" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 									</ul>
 								</li>
 							</ul>
