--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
 						<div class="content">
 							<p>I have learned a <strong>variety</strong> of things in <strong><em>Fashion Designing</em></strong> by my own.</p>
 							<ul class="feature-icons">
-								<li class="icon fa-laptop">Embroidery</li>
-								<li class="icon fa-bolt">Sketching</li>
-								<li class="icon fa-signal">Painting</li>
-								<li class="icon fa-signal">Textile Design</li>
-								<li class="icon fa-signal">Pattern Making</li>
-								<li class="icon fa-signal">Layout</li>
+								<li class="icon fa-star">Embroidery</li>
+								<li class="icon fa-star">Sketching</li>
+								<li class="icon fa-star">Painting</li>
+								<li class="icon fa-star">Textile (Weaving)</li>
+								<li class="icon fa-star">Pattern Making</li>
+								<li class="icon fa-star">Layout</li>
+								<li class="icon fa-star">Texture</li>
+								<li class="icon fa-star">Stitching</li>
 							</ul>
 							<p>I am learning more things day by day. Every day I thinks about a new design in every scope of field, and keep searching in my mind about new creativity. </p>
 						</div>
@@ -69,48 +71,86 @@
 							<!-- Section -->
 								<section>
 									<header>
+										<h3>Sketching</h3>
+									</header>
+									<div class="content">
+										<div class="gallery">
+											<a href="images/pic1.jpg"><img src="images/pic1.jpg" alt="" /></a>
+											<a href="images/pic2.jpg"><img src="images/pic2.jpg" alt="" /></a>
+											<a href="images/pic10.png"><img src="images/pic10.png" alt="" /></a>
+											<a href="images/pic3.jpg"><img src="images/pic3.jpg" alt="" /></a>
+										</div>
+									</div>
+								</section>
+
+							<!-- Section -->
+								<section>
+									<header>
+										<h3>Painting</h3>
+									</header>
+									<div class="content">
+										<div class="gallery">
+											<a href="images/paint1.png"><img src="images/paint1.png" alt="" /></a>
+											<a href="images/paint2.png"><img src="images/paint2.png" alt="" /></a>
+											<a href="images/paint3.png"><img src="images/paint3.png" alt="" /></a>
+											<a href="images/paint4.png"><img src="images/paint4.png" alt="" /></a>
+										</div>
+									</div>
+								</section>
+
+							<!-- Section -->
+								<section>
+									<header>
 										<h3>Embroidery</h3>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+											<a href="images/emb1.png"><img src="images/emb1.png" alt="" /></a>
+											<a href="images/emb2.png"><img src="images/emb2.png" alt="" /></a>
+											<a href="images/emb3.png"><img src="images/emb3.png" alt="" /></a>
+											<a href="images/emb4.jpg"><img src="images/emb4.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
-
-							<!-- Section -->
 								<section>
 									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
+										<h3>Texture</h3>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<a href="images/tex1.png"><img src="images/tex1.png" alt="" /></a>
+											<a href="images/tex2.png"><img src="images/tex2.png" alt="" /></a>
+											<a href="images/tex3.png"><img src="images/tex3.png" alt="" /></a>
+											<a href="images/tex4.png"><img src="images/tex4.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
-
-							<!-- Section -->
 								<section>
 									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
+										<h3>Textile Design (Weaving)</h3>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+											<a href="images/wea1.jpg"><img src="images/wea1.jpg" alt="" /></a>
+											<a href="images/wea2.jpg"><img src="images/wea2.jpg" alt="" /></a>
+											<a href="images/wea3.jpg" class="landscape"><img src="images/wea3.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
-
+								<section>
+									<header>
+										<h3>Stitching</h3>
+									</header>
+									<div class="content">
+										<div class="gallery">
+											<a href="images/sti1.png"><img src="images/sti1.png" alt="" /></a>
+											<a href="images/sti2.png"><img src="images/sti2.png" alt="" /></a>
+											<a href="images/sti3.png"><img src="images/sti3.png" alt="" /></a>
+											<a href="images/sti5.jpg"><img src="images/sti5.jpg" alt="" /></a>
+											<a href="images/sti4.jpg" class="landscape"><img src="images/sti4.jpg" alt="" /></a>
+										</div>
+									</div>
+								</section>
 						</div>
 					</section>
 
