--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 						<div class="content">
 							<p><strong>Passionate</strong>, <strong>Professional</strong>, <strong>Ambitious</strong> and <strong>Communicative</strong>, this is what <strong>Ruchi Pandey</strong> represents. Her passion for fashion is born since her childhood. Clothes are for her a means of expression, the image projected to the outside world. She believes that defining her style is defining her identity, her personality ...... 
 								<br/>The style: it's the expression of oneself, that's what makes us all unique. Ruchi is currently pursuing her Fashion Technology Course from a Government Polytechnic Jhansi. In school time she has won a lot number of competitions in sketching, painting. The way of thinking of her mind makes Ruchi <strong>Stylist</strong>, <strong>Fashion</strong>, and <strong>Creative</strong>.  </p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -55,6 +54,7 @@
 								<li class="icon fa-star">Layout</li>
 								<li class="icon fa-star">Texture</li>
 								<li class="icon fa-star">Stitching</li>
+								<li class="icon fa-star">Fashion Illustration</li>
 							</ul>
 							<p>I am learning more things day by day. Every day I thinks about a new design in every scope of field, and keep searching in my mind about new creativity. </p>
 						</div>
@@ -67,6 +67,25 @@
 						</header>
 						<div class="content">
 							
+							<section>
+								<header>
+									<h3>Fashion Illustration</h3>
+								</header>
+								<div class="content">
+									<div class="gallery">
+										<a href="images/201.jpg"><img src="images/201.jpg" alt="" /></a>
+										<a href="images/203.jpg"><img src="images/203.jpg" alt="" /></a>
+										<a href="images/204.jpg"><img src="images/204.jpg" alt="" /></a>
+										<a href="images/205.jpeg"><img src="images/205.jpeg" alt="" /></a>
+										<a href="images/208.jpg"><img src="images/208.jpg" alt="" /></a>
+										<a href="images/209.jpg"><img src="images/209.jpg" alt="" /></a>
+										<a href="images/210.jpg"><img src="images/210.jpg" alt="" /></a>
+										<a href="images/211.jpg"><img src="images/211.jpg" alt="" /></a>
+										<a href="images/212.jpg"><img src="images/212.jpg" alt="" /></a>
+										<a href="images/213.jpg"><img src="images/213.jpg" alt="" /></a>
+									</div>
+								</div>
+							</section>
 
 							<!-- Section -->
 								<section>
@@ -79,6 +98,8 @@
 											<a href="images/pic2.jpg"><img src="images/pic2.jpg" alt="" /></a>
 											<a href="images/pic10.png"><img src="images/pic10.png" alt="" /></a>
 											<a href="images/pic3.jpg"><img src="images/pic3.jpg" alt="" /></a>
+											<a href="images/202.jpg"><img src="images/202.jpg" alt="" /></a>
+											<a href="images/214.jpg"><img src="images/214.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -183,10 +204,6 @@
 									<a href="mailto: priyanshupandey1210@gmail.com">priyanshupandey1210@gmail.com</a>
 								</li>
 								<li>
-									<h3>Phone</h3>
-									<a href="tel:+919990796102">(+91)-9990796102</a>
-								</li>
-								<li>
 									<h3>Address</h3>
 									<span>India</span>
 								</li>
@@ -194,8 +211,8 @@
 									<h3>Elsewhere</h3>
 									<ul class="icons">
 										<li><a href="https://www.facebook.com/ruchi.pandey.1210" target="__blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="https://www.instagram.com/r__1210_/" target="__blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://wa.me/+919990796102" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+										<li><a href="https://www.instagram.com/passion4__fashion_/" target="__blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="mailto: priyanshupandey1210@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 									</ul>
 								</li>
 							</ul>
