--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 						<div class="content">
 							<p><strong>Passionate</strong>, <strong>Professional</strong>, <strong>Ambitious</strong> and <strong>Communicative</strong>, this is what <strong>Ruchi Pandey</strong> represents. Her passion for fashion is born since her childhood. Clothes are for her a means of expression, the image projected to the outside world. She believes that defining her style is defining her identity, her personality ...... 
 								<br/>The style: it's the expression of oneself, that's what makes us all unique. Ruchi is currently pursuing her Fashion Technology Course from a Government Polytechnic Jhansi. In school time she has won a lot number of competitions in sketching, painting. The way of thinking of her mind makes Ruchi <strong>Stylist</strong>, <strong>Fashion</strong>, and <strong>Creative</strong>.  </p>
+							<span class="image main landscape" style="margin: 0;"><img src="images/216.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -94,12 +95,14 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
+											<a href="images/215.jpeg" class="landscape"><img src="images/215.jpeg" alt="" /></a>
 											<a href="images/pic1.jpg"><img src="images/pic1.jpg" alt="" /></a>
 											<a href="images/pic2.jpg"><img src="images/pic2.jpg" alt="" /></a>
 											<a href="images/pic10.png"><img src="images/pic10.png" alt="" /></a>
 											<a href="images/pic3.jpg"><img src="images/pic3.jpg" alt="" /></a>
 											<a href="images/202.jpg"><img src="images/202.jpg" alt="" /></a>
 											<a href="images/214.jpg"><img src="images/214.jpg" alt="" /></a>
+											<a href="images/218.jpg"><img src="images/218.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
